# vector-dataset-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: fbin_ibin_format.md  inspector_validate_feature.md  milestones.md  noise_and_gt_instructions.md  ui_components.md  ui_ux_guidelines.md  unwrap_feature.md  wrap_mapping.md
docs/milestones/: add_app_icon_feature.md  milestones.md  persist_state_feature.md
resources/: resources.qrc  vector-dataset-tool.desktop
src/: README.md  __init__.py  app.py  cli.py
src/scripts/: create_hdf5.py
src/ui/: __init__.py  main_window.py
src/utils/: __init__.py  dataset_scaler.py  settings.py  validator.py
src/utils/io/: __init__.py  converter.py  fbin_converter.py  fbin_reader.py  fbin_writer.py  hdf5_reader.py  hdf5_unwrapper.py  hdf5_wrapper.py  ibin_reader.py  ibin_writer.py  npy_reader.py  shard_merger.py
src/views/: __init__.py  advanced_inspector.py  converter_view.py  inspector_view.py  logs_view.py  merge_view.py  scale_view.py  settings_view.py  unwrap_view.py  wrap_view.py
src/widgets/: __init__.py
src/workers/: __init__.py  worker.py
tests/: __init__.py  test_binary_readers.py  test_converter.py  test_fbin_tools.py  test_hdf5_reader.py  test_npy_reader.py
tools/: generate_icons.py  install_desktop_entry.sh
