[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vector-dataset-toolkit"
version = "0.1.0"
description = "Desktop application for inspecting, converting, and manipulating vector dataset files"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = {text = "MIT"}
authors = [
    {name = "Zeev Ben-Sender"}
]
dependencies = [
    "PySide6>=6.5.0",
    "numpy>=1.24.0",
    "h5py>=3.9.0",
    "Pillow>=10.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
vdt = "src.app:main"
vdt-cli = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
